Fixed blockquote spacing issue

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -122,7 +122,6 @@ body {
 blockquote {
   font-size: 1.4em;
   width: 100%;
-  margin: 50px auto;
   color: #555555;
   padding: 1.2em 30px 1.2em 75px;
   border-left: 8px solid black;
